test/param/loop/paramForLoopWrongCountHigh.good
paramForLoopWrongCountHigh.chpl:1: error: count operators with positive count require the range to have a low bound
