test/param/loop/paramForLoopWrongCountHigh.chpl
for param i in ..3#2 {
    writeln(i);
}